--- a/JimmyjeviStripi/JimmyjeviStripi/Podrobnosti.xaml
+++ b/JimmyjeviStripi/JimmyjeviStripi/Podrobnosti.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="JimmyjeviStripi.MainPage"
+    x:Class="JimmyjeviStripi.Podrobnosti"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:JimmyjeviStripi"
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -15,8 +16,8 @@
         <TextBlock Text="{x:Bind ViewModel.Naslov}" Style="{ThemeResource TitleTextBlockStyle}"
                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <ListView Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
-                  ItemsSource="{x:Bind ViewModel.DostopnePoizvedbe}" 
-                  IsItemClickEnabled="True" ItemClick="ListView_ItemClick">
+                  ItemsSource="{x:Bind ViewModel.TrenutnePoizvedbe}" 
+                  >
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:PoizvedbaStripov">
                     <Grid Height="110" Margin="6">
